<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_activity"
    tools:context=".Controller.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_main_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_main_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <ImageView
        android:id="@+id/activity_main_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/IVlogo"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/activity_main_guideline_left"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/activity_main_username_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="16dp"
        android:background="@drawable/bg_main_activity_edit_text"
        android:inputType="textEmailAddress"
        android:hint="@string/ETemail_username"
        android:autofillHints="@string/ETemail_username"
        android:textColorHint="@color/colorLoginFormDetailsLight"
        android:textCursorDrawable="@drawable/bg_cursor"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/activity_main_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/activity_main_icon"/>

    <EditText
        android:id="@+id/activity_main_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_main_activity_edit_text"
        android:inputType="textPassword"
        android:hint="@string/ETpassword"
        android:autofillHints="@string/ETpassword"
        android:textColorHint="@color/colorLoginFormDetailsLight"
        android:textCursorDrawable="@drawable/bg_cursor"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/activity_main_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/activity_main_username_email"/>

    <Button
        android:id="@+id/activity_main_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/Blogin"
        android:textColor="@drawable/bg_main_activity_btn_text"
        android:textAllCaps="false"
        android:background="@drawable/bg_main_activity_btn"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/activity_main_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/activity_main_password"/>

    <TextView
        android:id="@+id/activity_main_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TVforgot_password"
        android:textSize="16sp"
        android:textColor="@color/colorLoginFormDetails"
        app:layout_constraintStart_toStartOf="@id/activity_main_guideline_left"
        app:layout_constraintEnd_toStartOf="@id/activity_main_guideline_right"
        app:layout_constraintTop_toBottomOf="@id/activity_main_login"/>

    <View
        android:id="@+id/activity_main_footer_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/activity_main_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TVno_account"
        android:textColor="@color/colorLoginFormDetails"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_footer_line"/>

    <TextView
        android:id="@+id/activity_main_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TVsign_up"
        android:textColor="@color/colorLoginFormDetails"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_footer_line"/>

</androidx.constraintlayout.widget.ConstraintLayout>