<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_activity"
    tools:context=".Controller.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_register_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_register_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_register_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:errorTextColor="@color/colorLoginFormDetails"
        app:layout_constraintEnd_toStartOf="@+id/activity_register_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/activity_register_guideline_left"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:autofillHints="@string/ETfullname"
            android:background="@drawable/bg_main_activity_edit_text"
            android:hint="@string/ETfullname"
            android:inputType="textNoSuggestions"
            android:textColorHint="@color/colorLoginFormDetailsLight"
            android:textCursorDrawable="@drawable/bg_cursor"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:errorTextColor="@color/colorLoginFormDetails"
        app:layout_constraintEnd_toStartOf="@+id/activity_register_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/activity_register_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/activity_register_full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="textNoSuggestions"
            android:background="@drawable/bg_main_activity_edit_text"
            android:hint="@string/ETusername"
            android:autofillHints="@string/ETusername"
            android:textColorHint="@color/colorLoginFormDetailsLight"
            android:textCursorDrawable="@drawable/bg_cursor"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:errorTextColor="@color/colorLoginFormDetails"
        app:layout_constraintEnd_toStartOf="@+id/activity_register_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/activity_register_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/activity_register_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_main_activity_edit_text"
            android:hint="@string/ETemail"
            android:autofillHints="@string/ETemail"
            android:textColorHint="@color/colorLoginFormDetailsLight"
            android:textCursorDrawable="@drawable/bg_cursor"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorTextColor="@color/colorLoginFormDetails"
        app:layout_constraintEnd_toStartOf="@+id/activity_register_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/activity_register_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/activity_register_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/bg_main_activity_edit_text"
            android:hint="@string/ETpassword"
            android:autofillHints="@string/ETpassword"
            android:textColorHint="@color/colorLoginFormDetailsLight"
            android:textCursorDrawable="@drawable/bg_cursor"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_register_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:padding="16dp"
        android:text="@string/Bsign_up"
        android:textColor="@drawable/bg_main_activity_btn_text"
        android:textAllCaps="false"
        android:background="@drawable/bg_main_activity_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_register_guideline_right"
        app:layout_constraintStart_toStartOf="@id/activity_register_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/activity_register_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>